# rusty_life

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/: display_config.ron
src/: draw.rs  grid.rs  main.rs  seeds.rs
src/grid/: cell.rs  point.rs
